<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/menu_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
    </group>
    <item android:title="@string/actions">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@drawable/ic_baseline_person_add_24"
                android:title="@string/signout" />
        </menu>
    </item>

</menu>