<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nicknameLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nicknameTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/nickname"
        android:textSize="24sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/nicknameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="126dp"
        android:text="@string/placeholder_text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/emailLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emailTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/email"
        android:textSize="24sp"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:text="@string/placeholder_text"
        android:textSize="24sp" />

</RelativeLayout>